<resources>
    <string name="app_name">Spend Less</string>
    <string name="spend_less">Spend Less</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="title_activity_home__page">Home_Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header - App Logo</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="monthly_analysis">Monthly Analysis</string>
    <string name="feedback">Feedback</string>
    <string name="rating">"Expense Rating : "</string>
    <string name="totalincom">"Total Income : "</string>
    <string name="totalexpense">"Total Expense : "</string>
    <string name="emal">"Email : "</string>
    <string name="currency">"Currency : "</string>
    <string name="namesd">"Name : "</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_account">My Account</string>
    <string name="cg">Name</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_add">Add</string>
    <string name="tab_text_1">Add Income</string>
    <string name="tab_text_2">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="category">Category : </string>
    <string name="select_date">Select Date</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="this_month">This Month :</string>
    <string name="today">Today :</string>
    <string name="month">Month :</string>
    <string name="date">Date</string>
    <string name="savedd">Save</string>
    <string name="submit">Submit</string>
    <string name="type_here">Enter Feedback here…</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_logo_spend_less">App Logo - Spend Less</string>
    <string name="having_trouble_send_us_a_mail">Having trouble? Send us a Mail</string>
    <string name="_0_0">0.0</string>\
</resources>
